# portfolio-advisor

./: .gitignore  README.md  portfolio.db  pyproject.toml  start-backend.bat  start-frontend.bat
backend/: main.py  portfolio.db  requirements.txt
frontend/: app.py  requirements.txt
