[project]
name = "portfolio-advisor"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.119.0",
    "uvicorn[standard]==0.37.0",
    "sqlalchemy==2.0.44",
    "pydantic==2.12.2",
    "yfinance==0.2.66",
    "pandas==2.3.3",
    "httpx==0.28.1",
    "apscheduler==3.11.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "streamlit==1.50.0",
    "plotly==6.3.1",
    "requests==2.32.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Tell hatchling to include backend and frontend folders
packages = ["backend", "frontend"]

# Or if you want to run scripts directly without building
[tool.hatch.build.targets.wheel.force-include]
"backend" = "backend"
"frontend" = "frontend"